syntax = "proto3";

package proto;

option go_package = "./proto;proto";

service user {
        rpc GetName(GetNameReq) returns (GetNameResp) {};
}

// Call returns a personalised "Hello $name" response
message GetNameReq {
        int32 userId = 1;
}

message GetNameResp {
        string name = 1;
}
